--- a/index.html
+++ b/index.html
@@ -2,22 +2,20 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Document</title>
+  <title>Blacklist</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
   <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
   <div class="container">
-    <section class="blacklistN">
+    <section class="blacklist">
       <header class="section-header">
         <h3>Blacklisted Words</h3>
         <button class="blacklist__add-word">add new word</button>
       </header>
-    </section>
-    <div class="blacklist">
       <div class="blacklist__words"></div>
-    </div>
+    </section>
     <section class="reviews">
       <header class="section-header">
         <h3>Reviews</h3>
@@ -26,9 +24,7 @@
       </header>
       <div class="reviews__list"></div>
     </section>
-    
   </div>
-  
   <script src="bower_components/jquery/dist/jquery.min.js"></script>
   <!-- <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script> -->
   <script src="js/app.js"></script>
