--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
       <div class="reviews__list"></div>
     </section>
   </div>
-  <script src="bower_components/jquery/dist/jquery.min.js"></script>
-  <!-- <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script> -->
+  <!-- <script src="bower_components/jquery/dist/jquery.min.js"></script> -->
+  <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
   <script src="js/app.js"></script>
 </body>
 </html>
