--- a/index.html
+++ b/index.html
@@ -27,6 +27,6 @@
   </div>
   <!-- <script src="bower_components/jquery/dist/jquery.min.js"></script> -->
   <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
-  <script src="js/app.js"></script>
+  <script src="js/compiled/app.js"></script>
 </body>
 </html>
