adde header coloring meta tags

--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
   <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="css/main.css">
+  <!-- Chrome, Firefox OS and Opera -->
+  <meta name="theme-color" content="#485056">
+  <!-- Windows Phone -->
+  <meta name="msapplication-navbutton-color" content="#485056">
+  <!-- iOS Safari -->
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 </head>
 <body>
   <div class="container">
